# Otto

./: .env.example  .gitignore  Dockerfile  Otto_System_Specification_v1.docx  Otto_System_Specification_v1.md  README.md  alembic.ini  docker-compose.yml  luan_health_system_guide.docx  pyproject.toml  run_live_tests.sh  start.sh
alembic/: env.py
alembic/versions/: 001_initial_otto_schema.py  002_phase3_schema.py  003_fix_phase3_missing_columns.py  004_wearable_integrations.py
app/: config.py  dependencies.py  main.py
app/api/: admin.py  auth.py  chat.py  clients.py  coach.py  conversations.py  coursework.py  documents.py  nudges.py  router.py  telegram_webhook.py  voice.py
app/db/: base.py  session.py
app/engine/: coaching_engine.py  context_builder.py  health_engine.py  memory_manager.py
app/llm/: base.py  claude.py  factory.py  openai_provider.py  prompts.py
app/models/: __init__.py  client.py  client_coursework.py  coach_note.py  conversation.py  coursework.py  document.py  goal.py  lab_result.py  message.py  nudge.py  nutrition_log.py  risk_score.py  training_note.py  user.py  wearable_data.py  wearable_integration.py
app/rag/: chunker.py  embeddings.py  retriever.py  vector_store.py
app/schemas/: client.py  conversation.py  coursework.py  document.py  health.py  message.py  user.py
app/services/: auth_service.py  coach_service.py  lab_ocr_service.py  nudge_service.py  nutrition_service.py  risk_engine.py  whoop_service.py
frontend/: package.json  tailwind.config.ts
scripts/: seed.py
tests/: conftest.py  test_live_api.py
(+53 files in other folders)
